--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   firebase_core:
   provider:
   google_sign_in:
-
+  image_picker:
+  firebase_storage:
+  uuid:
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
