--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   firebase_storage:
   uuid:
   timeago:
-  font_awesome_flutter: ^10.3.0
-  
+  font_awesome_flutter:
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -55,6 +55,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,6 +72,7 @@ flutter:
   assets:
     - assets/images/proje_logo2.png
     - assets/images/anonim_images.png
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
